--- a/raw_to_clean.Rmd
+++ b/raw_to_clean.Rmd
@@ -35,4 +35,36 @@ raw_data_filtered = raw_data %>%
 
 raw_data_filtered = raw_data_filtered %>% 
   filter(response == "n" | response == "j" | response == "f" | response == "g" | response == "null")
+#KERESZT
+raw_data_filtered$stimulus <- gsub('<div style="font-size:60px;">+</div>', '+', raw_data_filtered$stimulus, fixed = TRUE)
+
+#LE
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>le<br>le<br>le</span>", 'le le le', raw_data_filtered$stimulus, fixed = TRUE)
+
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>le</span>", 'le', raw_data_filtered$stimulus, fixed = TRUE)
+
+#FEL
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>fel<br>fel<br>fel</span>", 'fel fel fel', raw_data_filtered$stimulus, fixed = TRUE) 
+
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>fel</span>", 'fel', raw_data_filtered$stimulus, fixed = TRUE)
+
+#JOBB
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>jobb<br>jobb<br>jobb</span>", 'jobb jobb jobb', raw_data_filtered$stimulus, fixed = TRUE)
+
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>jobb</span>", 'jobb', raw_data_filtered$stimulus, fixed = TRUE)
+
+#BAL
+
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>bal<br>bal<br>bal</span>", 'bal bal bal', raw_data_filtered$stimulus, fixed = TRUE)
+
+
+raw_data_filtered$stimulus <- gsub("<span style='font-size: 35px;'>bal</span>", 'bal', raw_data_filtered$stimulus, fixed = TRUE)
+
+#CHECKMARK
+	
+raw_data_filtered$stimulus <- gsub("<div style='font-size: 35px; color: black;'>✔</div>", '✔', raw_data_filtered$stimulus, fixed = TRUE)
+
+raw_data_filtered$stimulus <- gsub('<div style="font-size: 35px; color: black;">✘</div>', '✘', raw_data_filtered$stimulus, fixed = TRUE
+)
+
 ```
