--- a/raw_to_clean.Rmd
+++ b/raw_to_clean.Rmd
@@ -69,9 +69,9 @@ task_trials <- raw_data_labeled %>%
   rename(feedback_type = feedback_from_next)
 ```
 
-```{r}
-#Demography data
+## Demography data
 
+```{r}
 demography_data <- raw_data %>%
   filter(
     trial_type %in% c(
@@ -115,6 +115,8 @@ demography_data <- demography_data %>%
 #Flagging and removing first trials
 
 ```
+
+## Survey data
 
 ```{r}
 #Survey data
